--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="keywords" content="Animalface, Artificial Intelligence animal test, Machine Learning animal face, Animal in You, Animal Faces, animalface, Puppy, Cat, Fox, Deer, Rabbit, Dinosaur">
     <meta name="author" content="Youtube-Jocoding">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51021d4400f45a10"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
