--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 
 <body>
     <nav class="p-3 container navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">Animal Face Cam</a>
+        <a class="navbar-brand" href="https://animalcam.netlify.app">Animal Face Cam</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Animal Face Cam
+                    <a class="nav-link" href="https://animalcam.netlify.app">Animal Face Cam
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Adwebzine.com</a>
+                    <a class="nav-link" href="https://adwebzine.com">Adwebzine.com</a>
                 </li>
             </ul>
         </div>
