--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
     <meta name="keywords" content="Animalface, Artificial Intelligence animal test, Machine Learning animal face, Animal in You, Animal Faces, animalface, Puppy, Cat, Fox, Deer, Rabbit, Dinosaur">
     <meta name="author" content="Youtube-Jocoding">
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://animalcam.netlify.app" />
+    <meta property="og:url" content="https://animalcam.netlify.app" />	
+    <meta property="og:type" content="website" />	
+    <meta property="og:title" content="Animal Face Cam" />	
+    <meta property="og:description" content="Animalface, Artificial Intelligence animal test, Machine Learning animal face, Animal in You, Animal Faces, animalface, Puppy, Cat, Fox, Deer, Rabbit, Dinosaur"	
+    />	
+    <meta property="og:image" content="https://animalcam.netlify.app/face.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51021d4400f45a10"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src=""></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37594060-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -28,8 +35,9 @@
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
-        gtag('config', '');
+        gtag('config', 'UA-37594060-1');
     </script>
+    <meta name="google-site-verification" content="nvhmY5KpwDKvg1kUuVP6u4zGs3-MRmoi2h4_5lbQBbI" />
 </head>
 
 <body>
@@ -41,12 +49,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://animalcam.netlify.app">Animal Face Cam
+                    <a class="nav-link" href="#" onclick="gtag('event', 'Animal Face Cam', {'event_category': 'Animal Face Cam','event_label': 'Top Menu'});">Animal Face Cam
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://adwebzine.com">Adwebzine.com</a>
+                    <a class="nav-link" href="https://adwebzine.com" onclick="gtag('event', 'Animal Face Cam', {'event_category': 'Animal Face Cam','event_label': 'Jump to awz'});">Adwebzine.com</a>
                 </li>
             </ul>
         </div>
@@ -61,12 +69,7 @@
         <p class="sr-only">Artificial intelligence test with your face, find an animal that resembles me! Artificial intelligence learned from representative animal celebrity photo data will find animals and features with my face. Please check directly from the screen without
             registering! No picture data is transmitted anywhere. Take a test of my animal face that AI sees! Puppy? Kitty? Fox? Deer? Rabbit? Bear? Dinosaur? Face testing allows you to find animals that resemble you.</p>
     </section>
-    <!-- <section class="youtube pb-3" id="yotube-mid-link">
-        <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center" onclick="gtag('event', '조코딩 유튜브 클릭', {'event_category': '조코딩 유튜브 클릭','event_label': '화면 중간'});">
-            <img src="img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon">
-            <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">By 조코딩 유튜브 채널</a>
-        </div>
-    </section> -->
+   
     <h3 class="pb-2 d-flex justify-content-center">Upload your photo to find out what animal in You below.</h3>
     <section class="d-flex justify-content-center">
         <!-- <p class="d-flex align-items-center pr-3">Female</p>
